<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tripidude</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="error">Error</string>
    <string name="saving">Saving</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="updating">Updating</string>
    <string name="saved">saved</string>
    <string name="error_no_internet">Please check your internet connection</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="image">Predefined Image</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="hotspot">Hotspot</string>
    <string name="route">Route</string>
    <string name="hotspot_detail">HSdetails</string>
    <string name="highscores">Highscores</string>
    <string name="event_detail">Edetail</string>
    <string name="create_event">Create event</string>
    <string name="close_route">Close route</string>
    <string name="follow_route">Follow route</string>
    <string name="create_route">Create route</string>
    <string name="create_hotspot">Create hotspot</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_password_confirm">Confirm Password</string>
    <string name="login_user_name">User Name</string>
    <string name="login_button">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="register_link">New to Tripitude? Register here!</string>
    <string name="register_button">Register</string>
    <string name="register_password_confirmation_failed">Passwords do not match</string>
    <string name="error_string_length_between">Length must be between %1$d and %2$d</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_email_not_valid">Email not valid</string>
    <string name="listed_hotspots">Do you want to add one of the listed hotspots?</string>
    <string name="create_new_hotspot">Create new hotspot</string>
    <string name="add_hotspot">Add hotspot</string>
    <string name="user_profile">User Profile</string>

    <!-- MapItem -->
    <string name="name_title">Name</string>
    <string name="name_title_error">Please enter a name for this hotspot</string>
    <string name="category_title">Category</string>
    <string name="categories_title">Categories</string>
    <string name="description_title">Description</string>
    <string name="created_by_title">created by %1$s</string>
    <string name="cost_title">Cost: </string>
    <string name="cost_error">Enter a valid cost value. For example 14.99</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="rating_title">Rating</string>
    <string name="comment_title">Comments</string>
    <string name="address_title">Address</string>
    <string name="category_detail">Category: </string>
    <string name="post_comment">Post comment</string>
    <string name="comment_saved">Comment saved</string>
    <string name="post_comment_progress">Post comment&#8230;</string>
    <string name="post">Post</string>
    <string name="event_title">Events</string>
    <string name="overview_title">Overview</string>
    <string name="back_to_map">Back to the map</string>
    <string name="post_rating_progress">Post rating&#8230;</string>
    <string name="rating_saved">Rating saved</string>
    <string name="userprofile_title">Your Profile</string>
    <string name="userprofile_events">Your Events</string>
    <string name="categories_all">All Categories</string>
    <string name="checkin_button">Check-In</string>
    <string name="create_hotspot_here">Create hotspot here?</string>
    <string name="create_hotspot_location">A is going to be created at #location</string>

    <!-- Event -->
    <string name="event_location_title">Location</string>
    <string name="event_name_title">Event Name</string>
    <string name="event_date_button">Date</string>
    <string name="event_time_title">Time</string>
    <string name="event_category_title">Category</string>
    <string name="event_description_title">Description</string>
    <string name="event_host_title">Host</string>
    <string name="event_save_button">Save</string>
    <string name="event_saved">Event saved</string>
    <string name="event_cancel_button">Cancel</string>
    <string name="event_period_title">Time Period</string>
    <string name="attend_event">Attend</string>
    <string name="attending_users_title">Attending Users</string>
    <string name="please_enter_date">You need to enter a date and time</string>
    <string name="name_length">The name of the event should be between 5 and 50 characters.</string>

    <!-- User Profile -->
    <string name="username">Username</string>
    <string name="user_email_title">E-Mail Address</string>
    <string name="user_change_password_title">Change Password</string>
    <string name="user_change_avatar_title">Change Avatar</string>
    <string name="user_change_avatar_text">Click to select a picture from your gallery</string>
    <string name="user_rank_title">Current User Rank</string>
    <string name="user_events_title">My Events</string>
    <string name="user_language_title">Selected Language</string>
    <string name="user_password">******</string>

    <!-- Highscores -->
    <string name="highscores_title">Highscores</string>

    <!-- Hotspot Categories -->
    <string-array name="category_array">
        <item>Arts</item>
        <item>University</item>
        <item>Food</item>
        <item>Nightlife</item>
        <item>Other</item>
        <item>Outdoors</item>
        <item>Residence</item>
        <item>Shopping</item>
        <item>Travel</item>
    </string-array>

    <!-- DB Categories -->
    <string-array name="category_id_array">
        <item>arts_entertainment</item>
        <item>college_university</item>
        <item>food</item>
        <item>nightlife</item>
        <item>other</item>
        <item>outdoors_recreation</item>
        <item>residence</item>
        <item>shop_service</item>
        <item>travel_transport</item>
    </string-array>

    <!-- Event Period -->
    <string-array name="event_period_array">
        <item>Show All</item>
        <item>Next week</item>
        <item>Next month</item>
        <item>Past events</item>
    </string-array>

    <!-- Custom info window -->
    <string name="show_details">Show details</string>
    <string name="show_route">Show route</string>

    <string-array name="info_window_options_hotspot">
        <item>Show details</item>
        <item>Add to new route</item>
    </string-array>
    <string-array name="info_window_options_route">
        <item>Show details</item>
        <item>Show route</item>
    </string-array>

    <!-- Search -->
    <string name="search_button">Search</string>
    <string name="search_name">Search by name</string>
    <string name="all_button">All</string>
    <string name="hotspot_button">Hotspots</string>
    <string name="route_button">Routes</string>
    <string name="event_button">Events</string>
    <string name="search_list">Show List</string>
    <string name="button_begin_eventtime">12.12.2012</string>
    <string name="button_end_eventtime">12.12.2012</string>
    <string name="search_eventtime_field">Search Period:</string>
    <string name="search_eventtime_betweenfield">to</string>

    <!-- Event Categories -->
    <string-array name="event_category_array">
        <item>Arts</item>
        <item>Eating</item>
        <item>Shopping</item>
        <item>Dancing</item>
        <item>Party</item>
        <item>Sightseeing</item>
        <item>Other</item>
    </string-array>

    <!-- Tutorial -->
    <string name="showcase_title1">Menu</string>
    <string name="showcase_message1">Swipe from the left or click the icon to see the main menu!</string>
    <string name="showcase_title2">Create Hotspots</string>
    <string name="showcase_message2">Touch and hold any spot on the map to create a hotspot!</string>
    <string name="showcase_title3">Do you want to see the tutorial again?</string>
    <string name="showcase_message3">Start the tutorial whenever you want from the menu!</string>
    <string name="tutorial_showed">tutorial_showed</string>
    <string name="action_tutorial">Show tutorial!</string>
    <string name="nicely_done">That\'s how you do it!</string>

</resources>