<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_item_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mapitem_title"
        style="@style/mapitem_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:drawableLeft="@drawable/pin_standard"
        android:drawablePadding="@dimen/text_icon_padding"
        android:inputType="none"
        android:paddingLeft="@dimen/home_padding"
        android:paddingRight="@dimen/home_padding"
        android:text="@string/hotspot" />

    <TextView
        android:id="@+id/mapitem_category"
        style="@style/mapitem_text_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:paddingLeft="@dimen/home_padding"
        android:paddingRight="@dimen/home_padding"
        android:text="@string/category_title" />
    
    <TextView
        android:id="@+id/mapitem_desc"
        style="@style/mapitem_text_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/glyphicons_book"
        android:drawablePadding="@dimen/text_icon_padding"
        android:inputType="none"
        android:paddingLeft="@dimen/home_padding"
        android:paddingRight="@dimen/home_padding"
        android:text="@string/description_title" />

</LinearLayout>