<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/button_create_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dip"
        android:background="@drawable/btn_blue"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:text="@string/create_route"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_create_hotspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dip"
        android:background="@drawable/btn_blue"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:text="@string/create_hotspot"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_create_route_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dip"
        android:layout_toRightOf="@id/button_create_hotspot"
        android:background="@drawable/btn_red"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:text="@string/save_button"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_create_route_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dip"
        android:layout_toRightOf="@id/button_create_route_done"
        android:background="@android:color/darker_gray"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:text="@string/cancel_button"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>